# kyeboard

./: .eslintrc.cjs  .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
emails/: Cargo.toml
src/: App.vue  main.ts
src/assets/: main.sass
src/components/: NavBar.vue  SideBar.vue
src/router/: index.ts
src/views/: Blogs.vue  Contact.vue  HomeView.vue  Projects.vue  Resume.vue
thank_email_sender/: Cargo.toml
thank_email_sender/src/: main.rs
